# image-generation-model-comparison-portal

./: .gitignore  README.md  pyproject.toml
docs/: CONTENT_SAFETY_EVALUATION.md  IMAGE_QUALITY_EVALUATION.md  MODEL_ROUTING.md
src/image_generation_model_comparison_portal/: app.py  config.py  main.py  models.py  providers.py  report_builder.mjs  safety.py  services.py  webapp.py  widgets.py
src/image_generation_model_comparison_portal/web/: app.js  index.html  styles.css
test-reports/: NoiseRemovalTestReport.md  aggregate-report.html  aggregate-report.md
test-reports/archive/2026-06-18-main-baseline/: aggregate-report.html
tools/: aggregate_report.py  model-reference.json  run_sweep.py
